[gd_scene load_steps=15 format=2]

[ext_resource path="res://paddle/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://mp3/music.mp3" type="AudioStream" id=2]
[ext_resource path="res://paddle/player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://new_/ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://mainLevel.gd" type="Script" id=5]
[ext_resource path="res://font_/MusticaPro-SemiBold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://img_/bacground.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.113725, 0.0117647, 0.176471, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1280, 688.412 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 11.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19.5, 18 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.5, 261.5 )

[sub_resource type="DynamicFont" id=6]
size = 82
font_data = ExtResource( 6 )

[node name="mainLevel" type="Node2D"]
position = Vector2( 0, -9 )
script = ExtResource( 5 )

[node name="Panel" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Panel"]
margin_right = 1280.0
margin_bottom = 617.0
custom_styles/panel = SubResource( 7 )

[node name="Panel2" type="Panel" parent="Panel"]
margin_right = 1280.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 3 )

[node name="Score" type="Label" parent="Panel"]
margin_left = 308.0
margin_top = 11.0
margin_right = 991.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.65098, 0.509804, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "test"
align = 1

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 20, 300 )

[node name="player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1260, 300 )

[node name="wall" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/WallTop"]
position = Vector2( 640, 88 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall/WallTop"]
position = Vector2( 640, 588.25 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall/WallTop"]
position = Vector2( 19.5, 119 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="wall/WallTop"]
position = Vector2( 20, 558 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="wall/WallTop"]
position = Vector2( 1262.5, 119 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="wall/WallTop"]
position = Vector2( 1262, 558 )
shape = SubResource( 5 )

[node name="leftArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftArea"]
position = Vector2( -8.5, 338.5 )
shape = SubResource( 4 )

[node name="rightArea" type="Area2D" parent="."]
position = Vector2( 1296, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightArea"]
position = Vector2( -8, 337.5 )
shape = SubResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 300 )

[node name="Timer" type="Label" parent="."]
visible = false
margin_left = 136.0
margin_top = 330.0
margin_right = 176.0
margin_bottom = 435.0
custom_fonts/font = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[connection signal="body_entered" from="leftArea" to="." method="_on_leftArea_body_entered"]
[connection signal="body_entered" from="rightArea" to="." method="_on_rightArea_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
